# Aquila

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  TODO.md
build-tools/: build.sh
build-tools/aquila/: Makefile.am  aclocal.m4  configure  configure.in  crt0.c  crti.S  crti.s  crtn.S  crtn.s  syscalls.c  termios.c
build-tools/aquila/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
build-tools/aquila/bits/: socket.h
build-tools/aquila/pthread/: Makefile.am  configure.in  pthread_create.c  pthread_exit.c  pthread_join.c  syscalls.h
build-tools/aquila/sys/: _types.h  aq_auth.h  fcntl.h  ioctl.h  mman.h  mount.h  socket.h  termios.h  un.h
build-tools/patches/: automake.patch  gcc-7.3.0-travis.patch  newlib.patch  newlib.patch.bak
configs/: clang.mk  gcc.mk  i386-pc.mk  i386-quark.mk  pcc.mk
docs/: .features.md.swp  CNAME  _config.yml  aboutaquila.md  aboutme.md  blog.html  features.md  index.html  index.md
docs/_includes/: nav.html
docs/blog/: index.html
initrd/: Makefile
initrd/etc/: hostname  motd  rc.init
initrd/init/: Makefile  init.c
initrd/usr/: test.c
kernel/: .gitignore  Makefile  README.md  config  config.mk  gen.pl  kernel.dox
kernel/arch/: Build  Build.mk  Makefile  x86_64
kernel/configs/: clang.mk  gcc.mk  i386-pc.mk  i586-quark.mk  i686-pc.mk  misc.mk  none.mk  pcc.mk  x86_64-pc.mk
kernel/core/: Build  Build.mk  kargs.c  main.c  module.c  printk.c  snprintf.c  time.c
kernel/dev/: Build.mk  Makefile  kdev.c
kernel/devices/: Build  Build.mk  console.c  devman.c  i8042.c  ps2kbd.c  ramdev.c  tty.c
kernel/ds/: bitmap.rs  buddy.rs  hashmap.rs  mod.rs  queue.rs  ringbuf.rs
kernel/fs/: .vfs.c.swp  Build  Build.mk  bcache.c  close.c  devfs.c  devpts.c  ext2.c  fops.c  (+23 more)
ramdisk/: build.sh  init.c  init.rc  prog.c
system/: Config.mk  Makefile
(+577 files in other folders)
