AC_PREREQ(2.59)
AC_INIT([newlib], [NEWLIB_VERSION])
AC_CONFIG_SRCDIR([crt0.c])
AC_CONFIG_SRCDIR([crti.s])
AC_CONFIG_SRCDIR([crtn.s])
AC_CONFIG_AUX_DIR(../../../..)
NEWLIB_CONFIGURE(../../..)

AC_CONFIG_SUBDIRS(pthread)

EXTRA_SUBDIRS=pthread
EXTRA_SUBLIBS="pthread/libpthread.la"

AC_SUBST(EXTRA_SUBDIRS)
AC_SUBST(EXTRA_SUBLIBS)

AC_CONFIG_FILES([Makefile pthread/Makefile])
AC_OUTPUT
